fix (分离tag与select逻辑)
